--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<button class="signin"><b>SIGN IN</b></button>
 			<a class="question" href="#">Forgot or change your password?</a>
-			<a class="cond" href="https://profile.intra.42.fr/legal">Read out terms and conditions</a>
+			<a class="cond" href="https://profile.intra.42.fr/legal">Read our terms and conditions</a>
 		</div>
 	</body>
 </html>
