--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta charset="utf-8">
 		<title>MedAitSwa</title>
 	</head>
-	<body>
+	<body >
 		<div class="container">
 			<div class="image">
 				<img src="assets/42.png">
 			</div>
 			<div class="editlogin">
-				<input class="login"  placeholder="login">
+				<input class="login" name="user[login]" placeholder="login">
 			</div>
 			<div class="editpass">
 				<input type="password" class="password" placeholder="password">
