--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<button class="signin"><b>SIGN IN</b></button>
 			<a class="question" href="#">Forgot or change your password?</a>
 			<a class="cond" href="https://profile.intra.42.fr/legal">Read our terms and conditions</a>
+			<div class="test"></div>
 		</div>
 	</body>
 </html>
